tests/snapshots/render__styled_view_grouped_by_priority.snap
---
source: tests/render.rs
expression: "render_styled_to_string(&mut app, 110, 26)"
---
┌Assigned to me · In Progress · Inbox────┐┌ Urgent & unassigned  ·  6 issues ────────────────────────────────┐
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "┌"
    [1] fg=Some(White) bg=Some(Reset) mod=BOLD "Assigned to me"
    [15] fg=Some(DarkGray) bg=Some(Reset) mod=NONE " · In Progress · Inbox"
    [37] fg=Some(Gray) bg=Some(Reset) mod=NONE "────┐"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "┌ Urgent & unassigned  ·  6 issues ────────────────────────────────┐"
│⠋  Loading…                             ││group priority    sort manual                                     │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [1] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "⠋  Loading…"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [43] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "group "
    [49] fg=Some(White) bg=Some(Reset) mod=NONE "priority"
    [61] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "sort "
    [66] fg=Some(White) bg=Some(Reset) mod=NONE "manual"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
└────────────────────────────────────────┘│3 Urgent  ·  3 High                                               │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "└────────────────────────────────────────┘"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│3 "
    [45] fg=Some(Gray) bg=Some(Reset) mod=NONE "Urgent"
    [51] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "  ·  "
    [56] fg=Some(Yellow) bg=Some(Reset) mod=NONE "3 "
    [58] fg=Some(Gray) bg=Some(Reset) mod=NONE "High"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
┌Recently viewed─────────────────────────┐│                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "┌Recently viewed─────────────────────────┐"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│Issues you open land here               ││Urgent  3                                                         │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [1] fg=Some(Reset) bg=Some(Reset) mod=NONE "Issues you open land here               "
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [43] fg=Some(Cyan) bg=Some(Reset) mod=BOLD "Urgent"
    [49] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "  3"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
└────────────────────────────────────────┘│    DAN2-7 Wood-fired oven runs 40°C…  In Progress   oven  dan  1d│
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "└────────────────────────────────────────┘"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [43] fg=Some(White) bg=Some(DarkGray) mod=NONE "    DAN2-7 Wood-fired oven runs 40°C…  In Progress   oven  dan  1d"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
┌Saved Views─────────────────────────────┐│    DAN-10 Sprinkle dispenser …  In Progress   production  dan  1d│
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "┌Saved Views─────────────────────────────┐"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [47] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "DAN-10"
    [54] fg=Some(White) bg=Some(Reset) mod=NONE "Sprinkle dispenser …"
    [76] fg=Some(Yellow) bg=Some(Reset) mod=NONE "In Progress"
    [89] fg=Some(Black) bg=Some(Rgb(235, 87, 87)) mod=NONE " production "
    [102] fg=Some(Blue) bg=Some(Reset) mod=NONE "dan"
    [107] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "1d"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│Urgent & unassigned                     ││    DAN2-3 Add gluten-free base option to t…  Todo   menu  dan  1d│
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [1] fg=Some(Reset) bg=Some(Rgb(45, 45, 48)) mod=NONE "Urgent & unassigned                     "
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [47] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "DAN2-3"
    [54] fg=Some(White) bg=Some(Reset) mod=NONE "Add gluten-free base option to t…"
    [89] fg=Some(Gray) bg=Some(Reset) mod=NONE "Todo"
    [95] fg=Some(Black) bg=Some(Rgb(15, 157, 88)) mod=NONE " menu "
    [102] fg=Some(Blue) bg=Some(Reset) mod=NONE "dan"
    [107] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "1d"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│Oven incidents                          ││High  3                                                           │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [1] fg=Some(Reset) bg=Some(Reset) mod=NONE "Oven incidents                          "
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [43] fg=Some(Cyan) bg=Some(Reset) mod=BOLD "High"
    [47] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "  3"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│Menu ideas                              ││    DAN2-2 Delivery driver GPS p…  In Progress   delivery  dan  1d│
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [1] fg=Some(Reset) bg=Some(Reset) mod=NONE "Menu ideas                              "
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [47] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "DAN2-2"
    [54] fg=Some(White) bg=Some(Reset) mod=NONE "Delivery driver GPS p…"
    [78] fg=Some(Yellow) bg=Some(Reset) mod=NONE "In Progress"
    [91] fg=Some(Black) bg=Some(Rgb(94, 106, 210)) mod=NONE " delivery "
    [102] fg=Some(Blue) bg=Some(Reset) mod=NONE "dan"
    [107] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "1d"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││    DAN-13 Introduce a maple-bacon donut fo…  Todo   menu  dan  1d│
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [47] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "DAN-13"
    [54] fg=Some(White) bg=Some(Reset) mod=NONE "Introduce a maple-bacon donut fo…"
    [89] fg=Some(Gray) bg=Some(Reset) mod=NONE "Todo"
    [95] fg=Some(Black) bg=Some(Rgb(15, 157, 88)) mod=NONE " menu "
    [102] fg=Some(Blue) bg=Some(Reset) mod=NONE "dan"
    [107] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "1d"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││    DAN2-5 Settle the pineapple…  Backlog   customer-poll  dan  1d│
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [47] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "DAN2-5"
    [54] fg=Some(White) bg=Some(Reset) mod=NONE "Settle the pineapple…"
    [77] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "Backlog"
    [86] fg=Some(Black) bg=Some(Rgb(242, 201, 76)) mod=NONE " customer-poll "
    [102] fg=Some(Blue) bg=Some(Reset) mod=NONE "dan"
    [107] fg=Some(DarkGray) bg=Some(Reset) mod=NONE "1d"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
└ 1 of 3 ────────────────────────────────┘│                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "└"
    [1] fg=Some(DarkGray) bg=Some(Reset) mod=NONE " 1 of 3 "
    [9] fg=Some(Gray) bg=Some(Reset) mod=NONE "────────────────────────────────┘"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
┌Teams───────────────────────────────────┐│                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "┌Teams───────────────────────────────────┐"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
│                                        ││                                                                  │
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [41] fg=Some(Gray) bg=Some(Reset) mod=NONE "│"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
    [109] fg=Some(Yellow) bg=Some(Reset) mod=NONE "│"
└────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
    [0] fg=Some(Gray) bg=Some(Reset) mod=NONE "└────────────────────────────────────────┘"
    [42] fg=Some(Yellow) bg=Some(Reset) mod=NONE "└──────────────────────────────────────────────────────────────────┘"
 j move   enter open   e edit   v display   z zoom   esc back   q quit                    Dan's Donuts · @dan
    [0] fg=Some(DarkGray) bg=Some(Reset) mod=NONE " j move   enter open   e edit   v display   z zoom   esc back   q quit"
    [90] fg=Some(Cyan) bg=Some(Reset) mod=NONE "Dan's Donuts · @dan "
