tests/snapshots/render__team_surface_shows_its_mode.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 84, 24)"
---
┌Assigned to me 1/3────────────┐┌ Donuts  ·  active  ·  2 issues ──────────────────┐
│!!! DAN2-7 In Progress Wood-fi││group status    sort manual                       │
│!!! DAN-10 In Progress Sprinkl││1 In Progress  ·  1 Todo                          │
└ 1 of 7 ──────────────────────┘│                                                  │
┌Recently viewed───────────────┐│In Progress  1                                    │
│Issues you open land here     ││!!! DAN-10 Sprinkle dispens…   production  dan  1d│
└──────────────────────────────┘│Todo  1                                           │
┌Saved Views───────────────────┐│!!  DAN-13 Introduce a maple-baco…   menu  dan  1d│
│⠋  Loading…                   ││                                                  │
└──────────────────────────────┘│                                                  │
┌Teams─────────────────────────┐│                                                  │
│Donuts                        ││                                                  │
│Pizza                         ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
└ 1 of 2 ──────────────────────┘└──────────────────────────────────────────────────┘
 j move   enter open   ] [ mode   e edit   z zoom   esc back  … Dan's Donuts · @dan
