tests/snapshots/render__team_triage_mode_shows_unrouted_issues.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 84, 24)"
---
┌Assigned to me 1/3────────────┐┌ Pizza  ·  triage  ·  1 issues ───────────────────┐
│!!! DAN2-7 In Progress Wood-fi││group status    sort manual                       │
│!!! DAN-10 In Progress Sprinkl││1 Triage                                          │
└ 1 of 7 ──────────────────────┘│                                                  │
┌Recently viewed───────────────┐│Triage  1                                         │
│Issues you open land here     ││    DAN2-11 Customer reports a cold delivery,…  1d│
└──────────────────────────────┘│                                                  │
┌Saved Views───────────────────┐│                                                  │
│⠋  Loading…                   ││                                                  │
└──────────────────────────────┘│                                                  │
┌Teams─────────────────────────┐│                                                  │
│Donuts                        ││                                                  │
│Pizza                         ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
└ 2 of 2 ──────────────────────┘└──────────────────────────────────────────────────┘
 j move   enter open   ] [ mode   e edit   z zoom   esc back  … Dan's Donuts · @dan
